--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <table>
                         <tr>
                             <th>
-                                <img src="resources/placecholderPhoto.png">
+                                <img src="resources/images/Headshot-JapanBambooForest.webp">
                             </th>
                             <th class="brickClear" style="text-align: left;">
                                 <h1>Duncan McFadden</h1>
@@ -61,9 +61,9 @@
                     <p>A mock gaming and streaming peripheral company.
                         This is a branding project for a company that would sell physical products. Those products being cryptic themed gaming headsets, keyboards, microphones and other gaming and streaming peripherals.</p>
                     <div class="widegallery">
-                        <a href="resources/WendigoRoundSign-4C-300.jpg"><img src="resources/thumbs/WendigoRoundSign_thumb.jpg"></a>
-                        <a href="resources/WendigoBox-4C-300.jpg"><img src="resources/thumbs/WendigoBox_thumb.jpg"></a>
-                        <a href="resources/WendigoTShirt-4C-300.jpg"><img src="resources/thumbs/WendigoTShirt_thumb.jpg"></a>
+                        <a href="resources/images/Creature-SignMockup.webp"><img src="resources/thumbs/Creature-Sign_thumb.webp"></a>
+                        <a href="resources/images/Creature-BoxMockup.webp"><img src="resources/thumbs/Creature-BoxThumb.webp"></a>
+                        <a href="resources/images/Creature-TShirtMockup.webp"><img src="resources/thumbs/Creature-TShirt_thumb.webp"></a>
                     </div>
                 </div>
             </div>
@@ -72,11 +72,11 @@
                     <h2>Wander Navigate Skate</h2>
                     <p>A mock Longboard and Skate company. This multi-medium project involved making a brand, service, viability plan, app, and website. The company not only sells longboards but is aiming to build a community to offer guides for beginners and a collaborative “Where to Skate” map. </p>
                     <div class="widegallery"> 
-                        <a href="resources/WNSLaptopMock.png"><img src="resources/thumbs/WNSLaptopMock_thumb.png"></a>
-                        <a href="resources/WNSPhoneMock.png"><img src="resources/thumbs/WNSPhoneMock_thumb.png"></a>
-                        <a href="resources/9_1_Profile.png"><img src="resources/thumbs/9_1_Profile_thumb.png"></a>
-                        <a href="resources/10_Guides.png"><img src="resources/thumbs/10_Guides_thumb.png"></a>
-                        <a href="resources/12_Skate Map.png"> <img src="resources/thumbs/12_Skate Map_thumb.png"></a>
+                        <a href="resources/images/WNSLaptopMock.webp"><img src="resources/thumbs/WNSLaptopMock_thumb.webp"></a>
+                        <a href="resources/images/WNSPhoneMock.webp"><img src="resources/thumbs/WNSPhoneMock_thumb.webp"></a>
+                        <a href="resources/images/WNSProfile.webp"><img src="resources/thumbs/WNSProfile_thumb.webp"></a>
+                        <a href="resources/images/WNSGuides.webp"><img src="resources/thumbs/WNSGuides_thumb.webp"></a>
+                        <a href="resources/images/WNSMap.webp"> <img src="resources/thumbs/WNSMap_thumb.webp"></a>
                     </div>
                     <div class="shortSpace"></div>
                 </div>
@@ -86,12 +86,12 @@
                     <h2>TallTale Brewing Company</h2>
                     <p>A mock brewery. This project involved designing a consistent look for a multitude of alcoholic beverage styles. The challenge was making sure whiskey still looked like whiskey and wine still looked like wine while easily identifying it as part of the TallTale family of drinks. </p>
                     <div class="widegallery">
-                        <a href="resources/TallTale_4C_300.jpg"><img src="resources/thumbs/TallTale_thumb.jpg"></a>
-                        <a href="resources/TallTale-Whisky.png"><img src="resources/thumbs/TallTale-Whisky_thumb.png"></a>
-                        <a href="resources/TallTale-Wine.png"><img src="resources/thumbs/TallTale-Wine_thumb.png"></a>
-                        <a href="resources/TallTaleJuice.png"><img src="resources/thumbs/TallTaleJuice_thumb.png"></a>
-                        <a href="resources/TallTale-BC.png"><img src="resources/thumbs/TallTale-BC_Thumb.png"></a>
-                        <a href="resources/TallTale-BB.png"><img src="resources/thumbs/TallTale-BB_Thumb.png"></a>
+                        <a href="resources/images/TallTale_Full.webp"><img src="resources/thumbs/TallTale_thumb.webp"></a>
+                        <a href="resources/images/TallTale-Whisky.webp"><img src="resources/thumbs/TallTale-Whisky_thumb.webp"></a>
+                        <a href="resources/images/TallTale-Wine.webp"><img src="resources/thumbs/TallTale-Wine_thumb.webp"></a>
+                        <a href="resources/images/TallTaleJuice.webp"><img src="resources/thumbs/TallTale-Juice_thumb.webp"></a>
+                        <a href="resources/images/TallTale-BC.webp"><img src="resources/thumbs/TallTale-BC_thumb.webp"></a>
+                        <a href="resources/images/TallTale-BB.webp"><img src="resources/thumbs/TallTale-BB_thumb.webp"></a>
                     </div>
                     <div class="shortSpace"></div>
                 </div>
@@ -99,17 +99,27 @@
             <div class="illustrait squares section folio" id="section4">
                 <div class="barrel">
                     <h2>Illustration</h2>
-                    <p>Various illustrations covering a veriety of topics and usability. Form creative self-portraits to emojis that fit my brand and personality to a cryptic, psychologically spooky narrative podcast I wrote and performed. Logos aren't the only thing I'm good at.</p>
+                    <p>Various illustrations covering a veriety of topics and usability. From creative self-portraits to emojis that fit my brand and personality to a cryptic, psychologically spooky narrative podcast I wrote and performed. Logos aren't the only thing I'm good at.</p>
                     <div class="widegallery">
-                        <a href="resources/Headstrong.png"><img src="resources/thumbs/Headstrong_thumb.png"></a>
-                        <a href="resources/Banner@NG-DM.png"><img src="resources/thumbs/VMS_thumb.png"></a>
-                        <a href="resources/Emotes.png"><img src="resources/thumbs/3Heart-thumb.png"></a>
+                        <a href="resources/images/Headstrong.webp"><img src="resources/thumbs/Headstrong_thumb.webp"></a>
+                        <a href="resources/images/Banner@NG-DM.png"><img src="resources/thumbs/VMS_thumb.png"></a>
+                        <a href="resources/images/Emotes.webp"><img src="resources/thumbs/emotes_thumb.webp"></a>
                     </div>
                 </div>
-                <!--<div class="bottomspace"></div>-->
-
-                
-
+            </div>
+            <div class="forink squares section folio" id="section5">
+                <div class="barrel">
+                    <h2>InkSmith & Forward Education</h2>
+                    <p>InkSmith built Forward Education. Both are Kitchener based EdTech companies that sell coding and electronics kits to schools and educational programs. During my time there I updated warrenty documents, created product information one-pagers, 3 and 4 fold brochures, social media posts, infographics, illustrations, step-by-step 3D model building instructions, an injection molded product, and more. </p>
+                    <div class="widegallery">
+                        <a href="resources/images/ForInk-ProjectsThumbnailsGrid.png"><img src="resources/thumbs/ForInk-ProjectsThumbnailsGrid_thumb.webp"</a>
+                        <a href="resources/images/ForInk-LearningPlatformPost.webp"><img src="resources/thumbs/ForInk-LearningPlatform_thumb.webp"></a>
+                        <a href="resources/images/ForInk-ChargeInstructions.webp"><img src="resources/thumbs/ForInk-ChargeIllustration_thumb.webp"></a>
+                        <a href="resources/images/ForInk-ConventionPrize.webp"><img src="resources/thumbs/ForInk-ConventionPrize_thumb.webp"></a>
+                        <a href="resources/thumbs/"><img src="resources/thumbs/"></a>
+                        <a href="resources/thumbs/"><img src="resources/thumbs/"></a>
+                    </div>
+                </div>
             </div>
         <div class="clearfix"></div>
         
@@ -151,17 +161,16 @@
         var lightbox = new SimpleLightbox('.talltale a', {/* Options */});
         var lightbox = new SimpleLightbox('.digithreads a', {/* Options */});
         var lightbox = new SimpleLightbox('.illustrait a', {/* Options */});
-        var lightbox = new SimpleLightbox('.discordinfo a', {/* Options */});
+        var lightbox = new SimpleLightbox('.forink a', {/* Options */});
     </script>
     <script type="text/javascript" src="resources/fullPage.js-master/dist/fullpage.js"></script>
     <script type="text/javascript"> //FULLPAGE SCROLL
         var myFullpage = new fullpage('#fullpage', {
             navigation: true,
             navigationPosition: 'right',
-            navigationTooltips: ['Intro', 'Creature', 'Wander Navigate Skate', 'TallTale', 'Illustration'],
+            navigationTooltips: ['Intro', 'Creature', 'Wander Navigate Skate', 'TallTale', 'Illustration', 'InkSmith & Forward Education'],
             navigationColor: '#333333',
-            sectionsColor: ['#DCDDDE', '#D1D3D4', '#C7CBCA', '#BCBEC0', '#B1B3B6'],
-            sectionsColor: ['#414042', '#48484a', '#4d4d4f', '#545456', '#5a5b5d'],
+            sectionsColor: ['#414042', '#464447', '#4A484B', '#4E4C4F', '#525053', '#575559', '#5C5A5E' ],
             dragAndMove: true,
             scrollBar: false,
             scrollOverflow: true,
