--- a/index.html
+++ b/index.html
@@ -116,9 +116,10 @@
                         <a href="resources/images/ForInk-LearningPlatformPost.webp"><img src="resources/thumbs/ForInk-LearningPlatform_thumb.webp"></a>
                         <a href="resources/images/ForInk-ChargeInstructions.webp"><img src="resources/thumbs/ForInk-ChargeIllustration_thumb.webp"></a>
                         <a href="resources/images/ForInk-ConventionPrize.webp"><img src="resources/thumbs/ForInk-ConventionPrize_thumb.webp"></a>
-                        <a href="resources/thumbs/"><img src="resources/thumbs/"></a>
-                        <a href="resources/thumbs/"><img src="resources/thumbs/"></a>
+                        <a href="resources/images/ForEdu-brochure.webp"><img src="resources/thumbs/ForEdu-Brochure_thumb.webp"></a>
+                        <a href="resources/images/Ink-OnePager.webp"><img src="resources/thumbs/Ink-OnePager_thumb.webp"></a>
                     </div>
+                    <div class="shortSpace"></div>
                 </div>
             </div>
         <div class="clearfix"></div>
@@ -127,24 +128,10 @@
 
     <footer class="footie" id="foots">
         <div class="barrel">
-            <!--<div class="footgroup">
-                <a href="../index.html">home <span></span></a><br>
-                <a href="folio.html">portfolio <span></span></a><br>
-                <a href="artist.html">artist <span></span></a><br>
-                <a href="contact.html">contact <span></span></a>
-            </div>
-            <div class="socialgroup">
-                <a href="https://tiktok.com/@wetgoat_"><img src="..\resources\tiktoklogo.svg"></a>
-                <a href="https://twitter.com/wetgoat_"><img src="..\resources\twitterlogo.svg"></a>
-                <a href="https://www.youtube.com/channel/UCq2_NxUd1PRMznijQgyie0w"><img src="..\resources\youtubelogo.svg"></a>
-                <a href="https://instagram.com/wetgoat_/"><img src="..\resources\instalogo.svg"></a>
-                <a href="https://www.facebook.com/wetgoat.co"><img src="..\resources\facebooklogo.svg"></a>
-                <div class="push"><a href="https://linktr.ee/wetgoat_">@wetgoat_</a></div>
-            </div>
-            <div class="clearfix"></div>-->
+            <div class="footgroup"></div>
+            <div class="clearfix"></div>
             <div class="linebreak"></div>
-
-            <p>Copyright 2025 Duncan McFadden &copy;</p>
+            <p style="color: lightgray;">Copyright 2025 Duncan McFadden &copy;</p>
         </div>
     </footer>
 
