--- a/index.html
+++ b/index.html
@@ -21,12 +21,14 @@
         <a href="#"><img src="resources/wetgoat_concept_horiz_w.svg"></a>
         <nav>
             <a class="active" href="#">portfolio <span></span></a>
+            <a href="pages/video.html">video <span></span></a>
             <a href="pages/artist.html">artist <span></span></a>
         </nav>
         </div>
         <div class="clearfix"></div>
         <nav class="hamburg-nav" style="display:none;">
             <a class="active" href="/index">portfolio </a>
+            <a href="pages/video.html">video <span></span></a>
             <a href="pages/artist.html">artist </a>
         </nav>
     </header>
@@ -42,7 +44,7 @@
                             <th class="brickClear" style="text-align: left;">
                                 <h1>Duncan McFadden</h1>
                                 <span style="font-weight: bold; font-size: 12pt; ">wetgoat_ • NauticalGoat</span>
-                                <p>Wearer of many hats, I know my way around Illustrator and  also dabbles in 3D, motion design, and video. </p>
+                                <p>Wearer of many hats, I know my way around Illustrator and I also dabble in 3D, motion design, and <a href="pages/video.html">video</a>.</p>
                             </th>
                         </tr>
                         <tr>
