--- a/pages/video.html
+++ b/pages/video.html
@@ -36,11 +36,15 @@
             <p>Ever since I figured out how to edit Let's Play content in Windows Movie Maker when I was 10 I've sought out getting my hands dirty on the cutting room floor. In high school, I was the primary editor for all of the shortfilms I was involved with and jumped at the chance to make videos for my final projects. I refined my skills by continuing to make videos for my YouTube channel and videos for college assignements. Those skills led me to make tutorial videos for Forward Education and InkSmith when the projects were brought up.</p>
             <h2>Personal Content Creation</h2>
             <p>Here's a few of the videos I've made for me and my friends to laugh at. They vary greatly between each video but all offer a sense of charm.</p>
+            <div class="fillFrame">
                 <iframe id="Halo" src="https://www.youtube.com/embed/TTFmv-2yP4M?si=CkygRe-Y2HGnG9Px" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 <iframe id="CentreIsland" src="https://www.youtube.com/embed/k4gYH7RnNt0?si=WHjEiA1WgWf_Xfwe" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
             <h3>Forward Education</h3>
             <p>During my time working for Forward Education, I created a number of various informational videos, some of which were tutorial videos explaining the functionality of individual pieces of the electronics kit that they sell. Sometimes I was behind the camera, sometimes in front of the camera. These videos included script writing, lighting, shooting video, screen recording, voice over, video editing, motion graphics, thumbnails, audio manipulation and more. </p>
-            <iframe src="https://www.youtube.com/embed/ArhZUv8vugg?si=unWgs_VhRjU5heEk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <div class="fillFrame">
+                <iframe src="https://www.youtube.com/embed/ArhZUv8vugg?si=unWgs_VhRjU5heEk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
             <p>This is a series of similarly formatted, quick videos covering all you needed to know about an individual component in the kit.</p>
             <div class="videoGallery">
                 <iframe src="https://www.youtube.com/embed/m1zgHIJlZLs?si=dziv5uZ8f9lirT8M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -54,14 +58,17 @@
                 <iframe src="https://www.youtube.com/embed/SSdd_-_-eEA?si=j4C7rF7GCDYGcGnd" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
             <p>These videos covered the functionality of the software as well as concise, step-by-step instructions.</p>
-            <iframe id="Simulators" src="https://www.youtube.com/embed/gi5Olzmk2zk?si=AimIDLOVbbA2qUoK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-            <iframe id="Extension" src="https://www.youtube.com/embed/CMwvRT5e8d0?si=exaIKSB4VTf-yE_c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
+            <div class="fillFrame">
+                <iframe id="Simulators" src="https://www.youtube.com/embed/gi5Olzmk2zk?si=AimIDLOVbbA2qUoK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe id="Extension" src="https://www.youtube.com/embed/CMwvRT5e8d0?si=exaIKSB4VTf-yE_c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
             <h3>InkSmith</h3>
             <p>While working at InkSmith, who sell 3D printers, laser cutters and more, I produced, filmed and edited unboxing and tutorial videos for two of their printers and the 3D slicing software. I also worked on a few informational YouTube Shorts that were deleted due to an account error.</p>
-            <iframe id="Makerforge" src="https://www.youtube.com/embed/FpFePPlfTL4?si=FV3JUBhMpnc5CbOx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-            <iframe id="StylePlus" src="https://www.youtube.com/embed/C1RA5e43sdA?si=i7--dvy6PvIWhbN9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-            <iframe id="LaunchPad" src="https://www.youtube.com/embed/j-l5Tb63h2k?si=XmIfmFj0wZuItnFH" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <div class="fillFrame">
+                <iframe id="Makerforge" src="https://www.youtube.com/embed/FpFePPlfTL4?si=FV3JUBhMpnc5CbOx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe id="StylePlus" src="https://www.youtube.com/embed/C1RA5e43sdA?si=i7--dvy6PvIWhbN9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe id="LaunchPad" src="https://www.youtube.com/embed/j-l5Tb63h2k?si=XmIfmFj0wZuItnFH" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
         </div>
     </section>
 
